fixed security issues

--- a/hubapp/templates/hubapp/contactus.html
+++ b/hubapp/templates/hubapp/contactus.html
@@ -14,8 +14,8 @@
 {% block content %}
     <div>
         <p class="italic-text">Interested in our services? Talk to our expert</p>
-        <p><b>US</b>: +1 (765) 123 4567</p>
-        <p><b>Email</b>: ku26@purdue.edu | yeori0319@gamil.com</p>
+        <p><b>US</b>: +1 (123) 456 7890</p>
+        <p><b>Email</b>: ku26@purdue.edu</p>
     </div>
 {% endblock content %}
 
