--- a/hubapp/templates/hubapp/other_profile.html
+++ b/hubapp/templates/hubapp/other_profile.html
@@ -44,7 +44,7 @@
             {% endif %}
         </div>
     </div>
-
+        {% if user in request.user.following.all %}
         <div class="activity-container">
             <h4>My Recent Activities</h4>
                 <div>
@@ -121,5 +121,7 @@
 
                 </div>
         </div>
+    {% else %}
+    {% endif %}
     </div>
 {% endblock content %}
